src/test/deca/syntax/valid/synt/include_inMain.decah
// file needed to test #include "test.decah"
print("Imported");