src/test/deca/syntax/invalid/lexer/include_tests/123...._--.decah
// file needed to test #include "123...._--.decah"